[gd_scene load_steps=5 format=2]

[ext_resource path="res://ChooseClass.gd" type="Script" id=1]
[ext_resource path="res://image/Default_dark_fantasy_paladin_1.jpg" type="Texture" id=2]
[ext_resource path="res://image/Default_dark_fantasy_magician_0.jpg" type="Texture" id=3]
[ext_resource path="res://image/Default_dark_fantasy_archer_1.jpg" type="Texture" id=4]

[node name="ChooseClass" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 768.0
margin_bottom = 1376.0
rect_scale = Vector2( 0.799, 0.799 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 606.0
margin_top = -129.0
margin_right = 1374.0
margin_bottom = 1247.0
rect_scale = Vector2( 0.935, 0.935 )
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 1324.0
margin_top = -2.0
margin_right = 2092.0
margin_bottom = 1374.0
rect_scale = Vector2( 0.791, 0.791 )
texture = ExtResource( 3 )

[node name="Button_Class1" type="Button" parent="."]
margin_left = 25.0
margin_top = 392.0
margin_right = 554.0
margin_bottom = 573.0
text = "Paladin"

[node name="Button_Class2" type="Button" parent="."]
margin_left = 700.0
margin_top = 394.0
margin_right = 1229.0
margin_bottom = 575.0
text = "Shooter"

[node name="Button_Class3" type="Button" parent="."]
margin_left = 1360.0
margin_top = 395.0
margin_right = 1889.0
margin_bottom = 576.0
text = "Wizard"
